# WaffleHacks2022

./: .breakpoints  README.md  main.py  pyproject.toml  reference.txt  requirements.txt  server.py
static/: style.css
templates/: connect.html  index.html  style.html
